--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,21 @@
 # --- General options --- #
 
 # Name of website
-title: Sohrab Ahmed
+title: Hexaim
 
 # Short description of your site
-description: Let me introduce you to my geek side!
+description: Extending Your Reach with Technologies
+
 
 # Your name to show in the footer
-author: Sohrab Ahmed
+author: Hexaim
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-url: "https://sohrabahmed.github.io/"
+url: "https://hexaim.github.io/"
 
 # baseurl should be an empty string
 baseurl: ""
@@ -28,7 +29,7 @@ baseurl: ""
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  About Us: "aboutme"
 #  Blog: "blog"
   Resume: "resume/MD_Sohrab_Ahmed.pdf"
 #  Tags: "tags"
@@ -89,7 +90,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-#url-pretty: "https://sohrabahmed.github.io/"
+#url-pretty: "https://hexaim.github.io/"
 
 # --- Web Statistics Section --- #
 
@@ -102,7 +103,7 @@ share-links-active:
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: "SohrabAhmed"
+#disqus: "Hexaim"
 
 # To use Facebook Comments, fill in a Facebook App ID
 # fb_comment_id: ""
