--- a/_config.yml
+++ b/_config.yml
@@ -66,10 +66,10 @@ social-network-links:
   github: sohrabahmed
   twitter: void_io
 # reddit: yourname
-  linkedin: sohrabahmed
+  linkedin: company/hexaim/
 # xing: yourname
 # snapchat: yourname
-  instagram: void_io
+  instagram: hexaim
   rss: false
 # youtube: user/yourname
 # spotify: yourname
