--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ navbar-links:
   About Us: "aboutme"
 #  Blog: "blog"
   Company Profile: "resume/HEAIM.pptx"
+  Services: "Services"
   Careers: "Careers"
   Contact Us: "ContactUs"
   
@@ -64,10 +65,10 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "sohrabahmed@outlook.com"
-#  facebook: MDSohrabAhmed
+  email: "hexaim@outlook.com"
+#  facebook: Hexaim
   github: sohrabahmed
-  twitter: void_io
+  twitter: hexaim
 # reddit: yourname
   linkedin: company/hexaim/
 # xing: yourname
