updated footer social media

--- a/_config.yml
+++ b/_config.yml
@@ -65,9 +65,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "hexaim@outlook.com"
+  email: "hexaim@gmail.com"
 #  facebook: Hexaim
-  github: sohrabahmed
+  github: hexaim
   twitter: hexaim
 # reddit: yourname
   linkedin: company/hexaim/
