--- a/_config.yml
+++ b/_config.yml
@@ -68,12 +68,12 @@ social-network-links:
   email: "hexaim@gmail.com"
 #  facebook: Hexaim
   github: hexaim
-  twitter: hexaim
+  twitter: hexaimhq
 # reddit: yourname
   linkedin: company/hexaim/
 # xing: yourname
 # snapchat: yourname
-  instagram: hexaim
+  # instagram: hexaim
   rss: false
 # youtube: user/yourname
 # spotify: yourname
